# vibeCodingTest

./: CLAUDE.md  polymorphic-dazzling-meadow.md  pyproject.toml  terminal-1.txt  terminal-2.txt  terminal-3.txt  terminal-4.txt
examples/: demo_architect.py  demo_audit.py  demo_dfs_engine.py  demo_magic_link.py  demo_phase5.py
src/: __init__.py
src/agents/: __init__.py  architect.py  base.py  codex.py  magic_detector.py  magic_link.py  magic_templates.py  orchestrator.py  state.py
src/audit/: __init__.py  agent.py  analyzer.py  detector.py  fixer.py  reporter.py  rules.py
src/engine/: __init__.py  backtrack.py  context.py  context_manager.py  dfs_agent.py  incremental.py  walker.py
src/graph/: __init__.py  client.py  repository.py
src/models/: __init__.py  graph_edges.py  graph_nodes.py  magic_protocol_schema.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_integration.py
