[project]
name = "vibecoding"
version = "0.1.0"
description = "Graph-Driven DFS Code Agent Architecture - A next-generation code generation system with magic dependency awareness"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Agent Framework
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",

    # Graph Database
    "neo4j>=5.20.0",

    # API & Async
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",

    # Code Analysis
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",

    # Validation & Types
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Utilities
    "structlog>=24.4.0",
    "redis>=5.1.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.12.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
